// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pendo Markdown Parser Pendo extended syntax custom extensions parses underline 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 12,
                  "line": 1,
                  "offset": 11,
                },
                "start": {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "text",
              "value": "underline",
            },
          ],
          "position": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "underline",
        },
      ],
      "position": {
        "end": {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Pendo Markdown Parser Pendo extended syntax external libs strikethrough 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 16,
                  "line": 1,
                  "offset": 15,
                },
                "start": {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "text",
              "value": "strikethrough",
            },
          ],
          "position": {
            "end": {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "delete",
        },
      ],
      "position": {
        "end": {
          "column": 18,
          "line": 1,
          "offset": 17,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Pendo Markdown Parser basic markdown parses bold 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
                "start": {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "text",
              "value": "bold",
            },
          ],
          "position": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "strong",
        },
      ],
      "position": {
        "end": {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 9,
      "line": 1,
      "offset": 8,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Pendo Markdown Parser basic markdown parses italic (asterisk) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 19,
                  "line": 1,
                  "offset": 18,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "type": "text",
              "value": "italic (asterisk)",
            },
          ],
          "position": {
            "end": {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "emphasis",
        },
      ],
      "position": {
        "end": {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Pendo Markdown Parser basic markdown parses italic (underscore) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 21,
                  "line": 1,
                  "offset": 20,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "type": "text",
              "value": "italic (underscore)",
            },
          ],
          "position": {
            "end": {
              "column": 22,
              "line": 1,
              "offset": 21,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "emphasis",
        },
      ],
      "position": {
        "end": {
          "column": 22,
          "line": 1,
          "offset": 21,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Pendo Markdown Parser basic markdown parses link 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "type": "text",
              "value": "link",
            },
          ],
          "position": {
            "end": {
              "column": 28,
              "line": 1,
              "offset": 27,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "title": null,
          "type": "link",
          "url": "https://example.com",
        },
      ],
      "position": {
        "end": {
          "column": 28,
          "line": 1,
          "offset": 27,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 28,
      "line": 1,
      "offset": 27,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Pendo Markdown Parser basic markdown parses ordered list 1`] = `
{
  "children": [
    {
      "children": [
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 16,
                      "line": 1,
                      "offset": 15,
                    },
                    "start": {
                      "column": 4,
                      "line": 1,
                      "offset": 3,
                    },
                  },
                  "type": "text",
                  "value": "ordered list",
                },
              ],
              "position": {
                "end": {
                  "column": 16,
                  "line": 1,
                  "offset": 15,
                },
                "start": {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": true,
      "position": {
        "end": {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "spread": false,
      "start": 1,
      "type": "list",
    },
  ],
  "position": {
    "end": {
      "column": 16,
      "line": 1,
      "offset": 15,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Pendo Markdown Parser basic markdown parses unordered list (asterisk) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 24,
                      "line": 1,
                      "offset": 23,
                    },
                    "start": {
                      "column": 3,
                      "line": 1,
                      "offset": 2,
                    },
                  },
                  "type": "text",
                  "value": "unordered list item 1",
                },
              ],
              "position": {
                "end": {
                  "column": 24,
                  "line": 1,
                  "offset": 23,
                },
                "start": {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 24,
              "line": 1,
              "offset": 23,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 24,
                      "line": 2,
                      "offset": 47,
                    },
                    "start": {
                      "column": 3,
                      "line": 2,
                      "offset": 26,
                    },
                  },
                  "type": "text",
                  "value": "unordered list item 2",
                },
              ],
              "position": {
                "end": {
                  "column": 24,
                  "line": 2,
                  "offset": 47,
                },
                "start": {
                  "column": 3,
                  "line": 2,
                  "offset": 26,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 24,
              "line": 2,
              "offset": 47,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 24,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 24,
                      "line": 3,
                      "offset": 71,
                    },
                    "start": {
                      "column": 3,
                      "line": 3,
                      "offset": 50,
                    },
                  },
                  "type": "text",
                  "value": "unordered list item 3",
                },
              ],
              "position": {
                "end": {
                  "column": 24,
                  "line": 3,
                  "offset": 71,
                },
                "start": {
                  "column": 3,
                  "line": 3,
                  "offset": 50,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 24,
              "line": 3,
              "offset": 71,
            },
            "start": {
              "column": 1,
              "line": 3,
              "offset": 48,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": {
        "end": {
          "column": 24,
          "line": 3,
          "offset": 71,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "spread": false,
      "start": null,
      "type": "list",
    },
  ],
  "position": {
    "end": {
      "column": 24,
      "line": 3,
      "offset": 71,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Pendo Markdown Parser basic markdown parses unordered list (dash) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 24,
                      "line": 1,
                      "offset": 23,
                    },
                    "start": {
                      "column": 3,
                      "line": 1,
                      "offset": 2,
                    },
                  },
                  "type": "text",
                  "value": "unordered list item 1",
                },
              ],
              "position": {
                "end": {
                  "column": 24,
                  "line": 1,
                  "offset": 23,
                },
                "start": {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 24,
              "line": 1,
              "offset": 23,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 24,
                      "line": 2,
                      "offset": 47,
                    },
                    "start": {
                      "column": 3,
                      "line": 2,
                      "offset": 26,
                    },
                  },
                  "type": "text",
                  "value": "unordered list item 2",
                },
              ],
              "position": {
                "end": {
                  "column": 24,
                  "line": 2,
                  "offset": 47,
                },
                "start": {
                  "column": 3,
                  "line": 2,
                  "offset": 26,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 24,
              "line": 2,
              "offset": 47,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 24,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 24,
                      "line": 3,
                      "offset": 71,
                    },
                    "start": {
                      "column": 3,
                      "line": 3,
                      "offset": 50,
                    },
                  },
                  "type": "text",
                  "value": "unordered list item 3",
                },
              ],
              "position": {
                "end": {
                  "column": 24,
                  "line": 3,
                  "offset": 71,
                },
                "start": {
                  "column": 3,
                  "line": 3,
                  "offset": 50,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 24,
              "line": 3,
              "offset": 71,
            },
            "start": {
              "column": 1,
              "line": 3,
              "offset": 48,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": {
        "end": {
          "column": 24,
          "line": 3,
          "offset": 71,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "spread": false,
      "start": null,
      "type": "list",
    },
  ],
  "position": {
    "end": {
      "column": 24,
      "line": 3,
      "offset": 71,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Pendo Markdown Parser basic markdown parses unordered list (plus) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 24,
                      "line": 1,
                      "offset": 23,
                    },
                    "start": {
                      "column": 3,
                      "line": 1,
                      "offset": 2,
                    },
                  },
                  "type": "text",
                  "value": "unordered list item 1",
                },
              ],
              "position": {
                "end": {
                  "column": 24,
                  "line": 1,
                  "offset": 23,
                },
                "start": {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 24,
              "line": 1,
              "offset": 23,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 24,
                      "line": 2,
                      "offset": 47,
                    },
                    "start": {
                      "column": 3,
                      "line": 2,
                      "offset": 26,
                    },
                  },
                  "type": "text",
                  "value": "unordered list item 2",
                },
              ],
              "position": {
                "end": {
                  "column": 24,
                  "line": 2,
                  "offset": 47,
                },
                "start": {
                  "column": 3,
                  "line": 2,
                  "offset": 26,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 24,
              "line": 2,
              "offset": 47,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 24,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": {
                    "end": {
                      "column": 24,
                      "line": 3,
                      "offset": 71,
                    },
                    "start": {
                      "column": 3,
                      "line": 3,
                      "offset": 50,
                    },
                  },
                  "type": "text",
                  "value": "unordered list item 3",
                },
              ],
              "position": {
                "end": {
                  "column": 24,
                  "line": 3,
                  "offset": 71,
                },
                "start": {
                  "column": 3,
                  "line": 3,
                  "offset": 50,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": {
            "end": {
              "column": 24,
              "line": 3,
              "offset": 71,
            },
            "start": {
              "column": 1,
              "line": 3,
              "offset": 48,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": {
        "end": {
          "column": 24,
          "line": 3,
          "offset": 71,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "spread": false,
      "start": null,
      "type": "list",
    },
  ],
  "position": {
    "end": {
      "column": 24,
      "line": 3,
      "offset": 71,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
